// DBML (Database Markup Language) for dbdiagram.io
// Faculty Issue Reporting System Database Schema

// ----------------------------------------------------
// ENUMS
// ----------------------------------------------------

Enum user_role {
  REPORTER
  STAFF
  ADMIN
}

Enum ticket_status {
  OPEN
  IN_PROGRESS
  WAITING_INFO
  RESOLVED
  CLOSED
}

Enum ticket_priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum ticket_event_type {
  TICKET_CREATED
  STATUS_CHANGED
  ASSIGNED
  UNASSIGNED
  PRIORITY_CHANGED
  CATEGORY_CHANGED
  TEAM_CHANGED
  COMMENT_ADDED
  ATTACHMENT_ADDED
  FEEDBACK_SUBMITTED
  TICKET_CLOSED
}

// ----------------------------------------------------
// TABLES
// ----------------------------------------------------

Table teams {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  google_id varchar(255) [unique, note: 'Nullable, unique when present for Google OAuth']
  email varchar(255) [not null, unique]
  full_name varchar(255) [not null]
  password_hash varchar(255) [note: 'Nullable, stores bcrypt hash for password authentication']
  avatar_url text
  role user_role [not null, default: 'REPORTER']
  team_id uuid
  last_login_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    role [name: 'users_role_idx']
    team_id [name: 'users_team_id_idx']
  }

  Note: 'Users must have at least one authentication method: google_id IS NOT NULL OR password_hash IS NOT NULL (users_auth_method_check).'
}

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null, unique]
  description text
  default_team_id uuid
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table locations {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  building varchar(255) [not null]
  floor varchar(50)
  room varchar(50)
  latitude decimal(10,7)
  longitude decimal(10,7)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table tickets {
  id uuid [pk, default: `gen_random_uuid()`]
  ticket_number varchar(50) [not null, unique]
  title varchar(255) [not null]
  description text [not null]
  status ticket_status [not null, default: 'OPEN']
  priority ticket_priority [not null, default: 'MEDIUM']
  reporter_id uuid [not null]
  assignee_id uuid
  team_id uuid [not null]
  category_id uuid [not null]
  location_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  resolved_at timestamptz
  closed_at timestamptz

  indexes {
    status [name: 'tickets_status_idx']
    priority [name: 'tickets_priority_idx']
    reporter_id [name: 'tickets_reporter_id_idx']
    assignee_id [name: 'tickets_assignee_id_idx']
    team_id [name: 'tickets_team_id_idx']
    category_id [name: 'tickets_category_id_idx']
    location_id [name: 'tickets_location_id_idx']
    created_at [name: 'tickets_created_at_idx']
  }
}

Table ticket_comments {
  id uuid [pk, default: `gen_random_uuid()`]
  ticket_id uuid [not null]
  user_id uuid [not null]
  message text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (ticket_id, created_at) [name: 'ticket_comments_ticket_id_created_at_idx']
  }
}

Table ticket_attachments {
  id uuid [pk, default: `gen_random_uuid()`]
  ticket_id uuid [not null]
  uploaded_by_id uuid [not null]
  file_name varchar(255) [not null]
  file_url text [not null]
  mime_type varchar(100) [not null]
  file_size integer [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (ticket_id, created_at) [name: 'ticket_attachments_ticket_id_created_at_idx']
  }
}

Table ticket_events {
  id uuid [pk, default: `gen_random_uuid()`]
  ticket_id uuid [not null]
  actor_id uuid [not null]
  event_type ticket_event_type [not null]
  old_value text
  new_value text
  note text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (ticket_id, created_at) [name: 'ticket_events_ticket_id_created_at_idx']
  }
}

Table feedback {
  id uuid [pk, default: `gen_random_uuid()`]
  ticket_id uuid [not null, unique]
  rating integer [not null, note: 'Rating between 1 and 5']
  comment text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// ----------------------------------------------------
// RELATIONSHIPS / FOREIGN KEYS
// ----------------------------------------------------

Ref: users.team_id > teams.id [delete: set null]
Ref: categories.default_team_id > teams.id [delete: set null]
Ref: tickets.reporter_id > users.id [delete: restrict]
Ref: tickets.assignee_id > users.id [delete: set null]
Ref: tickets.team_id > teams.id [delete: restrict]
Ref: tickets.category_id > categories.id [delete: restrict]
Ref: tickets.location_id > locations.id [delete: restrict]
Ref: ticket_comments.ticket_id > tickets.id [delete: cascade]
Ref: ticket_comments.user_id > users.id [delete: restrict]
Ref: ticket_attachments.ticket_id > tickets.id [delete: cascade]
Ref: ticket_attachments.uploaded_by_id > users.id [delete: restrict]
Ref: ticket_events.ticket_id > tickets.id [delete: cascade]
Ref: ticket_events.actor_id > users.id [delete: restrict]
Ref: feedback.ticket_id - tickets.id [delete: cascade]
